CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
PROJECT(encoding-test)
SET(CMAKE_CXX_STANDARD 20)
SET(ENCODING_TEST_TARGET encoding-test)

MESSAGE(STATUS "${BoldCyan}Binary Target:  ${TARGET}${ColorReset}")

LIST(APPEND CMAKE_PREFIX_PATH /data/Environment/SharedLib/libtorch)
FIND_PACKAGE(Torch REQUIRED)

INCLUDE_DIRECTORIES(${TORCH_INCLUDE_DIRS})
AUX_SOURCE_DIRECTORY(. ENCODING_TEST_SOURCE_FILES)
ADD_EXECUTABLE(${ENCODING_TEST_TARGET} ${ENCODING_TEST_SOURCE_FILES})
TARGET_LINK_LIBRARIES(${ENCODING_TEST_TARGET} PRIVATE ${TORCH_LIBRARIES})