CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
PROJECT(encoding-lib)
SET(CMAKE_CXX_STANDARD 20)

SET(ENCODER_LIBRARY encoder)

LIST(APPEND CMAKE_PREFIX_PATH /data/Environment/SharedLib/libtorch)
FIND_PACKAGE(Torch REQUIRED)
MESSAGE(STATUS "Torch 链接库:  ${TORCH_LIBRARIES}")
MESSAGE(STATUS "Torch 头文件:  ${TORCH_INCLUDE_DIRS}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include ${TORCH_INCLUDE_DIRS})
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/source SOURCE_FILES)
MESSAGE(STATUS "encoder 源文件:  ${SOURCE_FILES}")

ADD_LIBRARY(${ENCODER_LIBRARY} STATIC ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${ENCODER_LIBRARY} PUBLIC common-type)
TARGET_LINK_LIBRARIES(${ENCODER_LIBRARY} PUBLIC ${TORCH_LIBRARIES})

ADD_SUBDIRECTORY(test)