AUX_SOURCE_DIRECTORY(. SOURCE)
SET(SOURCE_TARGET hd_source)

ADD_LIBRARY(${SOURCE_TARGET} STATIC ${SOURCE})

TARGET_LINK_LIBRARIES(${SOURCE_TARGET} PRIVATE pcap)
TARGET_LINK_LIBRARIES(${SOURCE_TARGET} PRIVATE zstd)

IF(HD_USE_THREADS)
  MESSAGE(STATUS "${BoldBlue}Using Threads::Threads: ${BoldCyan}${HD_USE_THREADS}${ColorReset}")
  TARGET_LINK_LIBRARIES(${SOURCE_TARGET} PRIVATE /usr/local/lib/librdkafka++.so)
ELSE()
  TARGET_INCLUDE_DIRECTORIES(${SOURCE_TARGET} PRIVATE ${RDKAFKA_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${SOURCE_TARGET} PRIVATE RdKafka::rdkafka RdKafka::rdkafka++)
ENDIF()
TARGET_LINK_LIBRARIES(${SOURCE_TARGET} PRIVATE ${TORCH_LIBRARIES})
IF(HD_USE_JE_MALLOC)
  MESSAGE(STATUS "${BoldBlue}使用 jemalloc: ${BoldCyan}${HD_USE_JE_MALLOC}${ColorReset}")
  TARGET_LINK_LIBRARIES(${SOURCE_TARGET} PRIVATE jemalloc)
ENDIF()
IF(HD_USE_TC_MALLOC)
  MESSAGE(STATUS "${BoldBlue}使用 tcmalloc: ${BoldCyan}${HD_USE_TC_MALLOC}${ColorReset}")
  TARGET_LINK_LIBRARIES(${SOURCE_TARGET} PRIVATE tcmalloc)
ENDIF()